# comp0034-tutorial-apps-flask

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/data/: create_db.py  model.pkl  paralympics.xlsx
src/ex_dash_in_flask/: README.md  __init__.py  simpledash.py  simpleflask.py
src/ex_dash_in_flask/templates/: index.html
src/ex_flasklogin/: README.md  __init__.py  forms.py  models.py  views.py
src/ex_flasklogin/templates/: base.html  display_profile.html  index.html  login.html  navbar.html  profile.html  signup.html
src/ex_formwithselect/: formwithselect.py
src/ex_formwithselect/templates/: form.html
src/ex_jwtextended/: README.md  __init__.py  models.py  routes.py  run.py
src/ex_mlmodel/: __init__.py  config.py  create_ml_model.py  model.pkl  routes.py
src/ex_mlmodel/templates/: index.html  layout.html
src/ex_reflection/: Household-rcycling-borough.csv  __init__.py  create_db.py  models.py  recycling_data.db  routes.py  run.py
src/ex_reflection/templates/: index.html
src/flask_para/: __init__.py  add_data.py  figures.py  forms.py  models.py  paralympics.py
src/flask_para/templates/: chart.html  (+3 more)
src/flask_para_sq3/: __init__.py  db.py  figures.py  forms.py  paralympics.py
src/miscellaneous/: create_ml_model.py
src/paralympics/: __init__.py  add_data.py  figures.py  forms.py  models.py  paralympics.py
src/paralympics_sq3/: __init__.py  forms.py  paralympics.py
tests/flask_tests/: conftest.py  ex_database_methods.py  test_form_with_select.py  test_paralympics_routes.py  test_routes.py
(+13 files in other folders)
